--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "react-flip-countdown",
     "version": "1.0.0",
-    "description": "Made with create-react-library",
+    "description": "The React Flip Countdown Component",
     "author": "rumess",
     "license": "MIT",
     "repository": "rumess/react-flip-countdown",
+    "keywords": [
+        "react",
+        "reactjs",
+        "countdown",
+        "flip",
+        "javascript",
+        "flip-countdown"
+    ],
     "main": "dist/index.js",
     "module": "dist/index.modern.js",
     "source": "src/index.js",
