Fix - Package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-flip-countdown",
+    "name": "@rumess/react-flip-countdown",
     "version": "1.0.0",
     "description": "The React Flip Countdown Component",
     "author": "rumess",
