Tweak - Package tweak

--- a/example/package.json
+++ b/example/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "react-flip-countdown-example",
-  "homepage": "https://rumess.github.io/react-flip-countdown",
-  "version": "0.0.0",
-  "private": true,
-  "dependencies": {
-    "react": "file:../node_modules/react",
-    "react-dom": "file:../node_modules/react-dom",
-    "react-scripts": "file:../node_modules/react-scripts",
-    "react-flip-countdown": "file:.."
-  },
-  "scripts": {
-    "start": "node ../node_modules/react-scripts/bin/react-scripts.js start",
-    "build": "node ../node_modules/react-scripts/bin/react-scripts.js build",
-    "test": "node ../node_modules/react-scripts/bin/react-scripts.js test",
-    "eject": "node ../node_modules/react-scripts/bin/react-scripts.js eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "name": "react-flip-countdown-example",
+    "homepage": "https://rumess.github.io/react-flip-countdown",
+    "version": "0.0.0",
+    "private": true,
+    "dependencies": {
+        "@rumess/react-flip-countdown": "^1.0.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
+        "react-scripts": "^3.4.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ]
 }
