--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@rumess/react-flip-countdown",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "description": "The React Flip Countdown Component",
     "author": "rumess",
     "license": "MIT",
@@ -14,14 +14,13 @@
         "flip-countdown"
     ],
     "main": "dist/index.js",
-    "module": "dist/index.modern.js",
     "source": "src/index.js",
     "engines": {
         "node": ">=10"
     },
     "scripts": {
-        "build": "rollup -c",
-        "start": "rollup -c -w",
+        "build": "rollup -c --environment INCLUDE_DEPS,BUILD:production",
+        "start": "rollup -c -w --environment INCLUDE_DEPS,BUILD:development",
         "prepublish": "run-s build",
         "test": "run-s test:unit test:lint test:build",
         "test:build": "run-s build",
@@ -54,7 +53,6 @@
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-standard": "^4.0.1",
         "gh-pages": "^2.2.0",
-        "microbundle-crl": "^0.13.10",
         "node-sass": "^4.14.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.0.4",
@@ -63,6 +61,7 @@
         "react-scripts": "^3.4.1",
         "rollup": "^0.64.1",
         "rollup-plugin-babel": "^3.0.7",
+        "rollup-plugin-cleaner": "^1.0.0",
         "rollup-plugin-commonjs": "^9.1.3",
         "rollup-plugin-node-resolve": "^3.3.0",
         "rollup-plugin-peer-deps-external": "^2.2.0",
@@ -73,8 +72,6 @@
         "dist"
     ],
     "dependencies": {
-        "moment": "^2.26.0",
-        "react-is": "^16.13.1",
-        "styled-components": "^5.1.1"
+        "moment": "^2.26.0"
     }
 }
