--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "deploy": "gh-pages -d example/build"
     },
     "peerDependencies": {
-        "react": "^16.0.0"
+        "react": "^18.2.0"
     },
     "devDependencies": {
         "@svgr/rollup": "^2.4.1",
@@ -53,12 +53,15 @@
         "eslint-plugin-react": "^7.17.0",
         "eslint-plugin-standard": "^4.0.1",
         "gh-pages": "^2.2.0",
-        "node-sass": "^4.14.1",
+        "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.0.4",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-scripts": "^3.4.1",
+        "postcss-flexbugs-fixes": "^5.0.2",
+        "postcss-normalize": "^10.0.1",
+        "postcss-preset-env": "^7.7.2",
+        "prettier": "^2.7.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1",
         "rollup": "^0.64.1",
         "rollup-plugin-babel": "^3.0.7",
         "rollup-plugin-cleaner": "^1.0.0",
